<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instrucciones">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_instrucciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <!-- ImageView con la flecha para volver atrás -->
        <ImageView
            android:id="@+id/iv_atras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/volver_atras" />

        <TextView
            style="@style/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:text="@string/instructions"
            android:textColor="@color/medium_grey"
            tools:ignore="RtlSymmetry" />

    </androidx.appcompat.widget.Toolbar>


    <!-- Video con el ejercicio-->
    <VideoView
        android:id="@+id/vv_ejercicio"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_marginHorizontal="25dp"
        android:contentDescription="@string/exercises"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_instrucciones"
        app:layout_constraintVertical_bias="0.05"
        tools:srcCompat="@raw/v_air_bike"
        android:visibility="visible"
        />

    <!-- TextView con el nombre del ejercicio-->
    <TextView
        android:id="@+id/tv_nombre_ejercicio"
        style="@style/ejercicios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exercise_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vv_ejercicio" />

    <!-- Scrollview que contiene el textview con las instrucciones del ejercicio-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nombre_ejercicio">

        <!-- TextView con las instrucciones de los ejercicios-->
        <TextView
            android:id="@+id/tv_instrucciones"
            style="@style/texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/text_instructions"
            android:textAlignment="textStart"
            android:layout_marginBottom="20dp"
            />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>