<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Terminado">

    <!-- Imagen de terminado-->

    <ImageView
        android:id="@+id/img_terminado"
        android:layout_width="325dp"
        android:layout_height="350dp"
        android:contentDescription="@string/congrats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:srcCompat="@drawable/img_finalizado" />

    <!-- TextView Enhorabuena-->
    <TextView
        android:id="@+id/tv_enhorabuena"
        style="@style/enhorabuena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/congrats"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_terminado"

        />

    <!-- Cardview con los datos del ejercicio-->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_cardview"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enhorabuena"
        app:layout_constraintVertical_bias="0.2"
        app:strokeColor="@color/medium_grey"
        app:strokeWidth="3dp">

        <!-- LinearLayout principal que contiene el resto de linearlaouts-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- LinearLayout DATOS ENTRENAMIENTO-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <!-- TextView DATOS ENTRENAMIENTO-->
                <TextView
                    style="@style/datos_entrenamientos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/workout_details">

                </TextView>


            </LinearLayout>

            <!-- LinearLayout que contiene la fecha y la hora-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <!-- TextView con la fecha-->
                <TextView
                    android:id="@+id/tv_fecha"
                    style="@style/cardview_entrenamientos"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:text="@string/date"
                    tools:ignore="RtlSymmetry">

                </TextView>
                <!-- TextView con la hora-->
                <TextView
                    android:id="@+id/tv_hora"
                    style="@style/cardview_entrenamientos"
                    android:layout_width="145dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:text="@string/time"
                    tools:ignore="RtlSymmetry">

                </TextView>

            </LinearLayout>

            <!-- LinearLayout con el resto de datos-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <!-- TextView con el número de ejercicios-->
                <TextView
                    android:id="@+id/tv_num_ejercicios"
                    style="@style/cardview_entrenamientos"
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/exercises"
                    tools:ignore="RtlSymmetry" />
                <!-- TextView con el total de calorías-->
                <TextView
                    android:id="@+id/tv_kcal"
                    style="@style/cardview_entrenamientos"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:text="@string/calories"
                    tools:ignore="RtlSymmetry" />

                <!-- TextView con la duración del entrenamiento-->
                <TextView
                    android:id="@+id/tv_duracion"
                    style="@style/cardview_entrenamientos"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/duration_workout"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>